fix min height on safari mobile

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   line-height: 1.6;
   justify-content: space-between;
   margin: 0;
-  min-height: 100vh;
+  min-height: 100dvh;
 }
 
 main {
@@ -82,6 +82,7 @@ footer {
   bottom: 0;
   font-family: "Courier New", monospace;
   font-size: clamp(0.625rem, 0.538rem + 0.4348vw, 0.875rem);
+  font-weight: normal;
   padding: 0.6em;
   position: fixed;
 }
